# fMRI_flatmaps

./: .gitignore  README.md  __init__.py  main.py  process_bids_to_flatmaps.py  pyproject.toml  quick_flat_test.py  requirements.txt  test_single_subject.py  visualize_flat_maps.py
bids/: __init__.py  loader.py
flat/: __init__.py  generator.py  projection.py
scripts/: run_flatmap_conv.sh
surface/: __init__.py  flattening.py  freesurfer.py
webdataset/: __init__.py  packager.py
