[project]
name = "fmri-preprocessing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "nibabel>=3.2.0",
    "nilearn>=0.8.0",
    "numba>=0.56.0",
    "numpy>=1.21.0",
    "opencv-python>=4.5.0",
    "pandas>=1.3.0",
    "scipy>=1.7.0",
    "webdataset>=0.2.0",
]
